my_portfolio/my_profile_site/style.css
/* ... */
      
      .container{
        max-width:1200px;
        width:100%;
        margin:0 auto;
        padding:0 120px;
        
      }

      .hero{
        position: relative;
        width: 100%;
        overflow: hidden;
        height: 87vh;
        display: flex;
        align-items: flex-start;    
        justify-content: flex-start; 
        padding-top: 58vh;
        padding-left: 14vh; 
      }

      .heroSlide{
        box-sizing:border-box;
       
        background-repeat:no-repeat;
        background-size:cover;
        background-position:center;
  
        /*
        display:flex;
        align-items:center;
        */

        /* position manipulation*/
      
        
        z-index:1;
        height: 100%;
        
      }

      .heroSlide.first{
        background-image:url(assets/images/compressedImages/snapbythree-my-g6e641CiHFQ-unsplash.jpg);
         
        animation:fadeInOutFor1 25s linear forwards; /*delay -secondsを使うとなんか表示の周期がずれておかしくなるからつかわないほうがいい*/
        z-index: 5;
        animation-iteration-count: infinite;
        top: 0;
        left: 0;
        width: 100%;
        position: absolute;
        background-position:50% 65%;
      }

      .heroSlide.second{
        background-image:url(assets/images/kieran-ReVIa_Nm6fE-unsplashKai.jpg);
        position: absolute;
        top: 0;
        left: 0;
        z-index: 4;
        animation:fadeInOutFor2 25s linear forwards;
        width: 100%;
        animation-iteration-count: infinite;
        background-position:10% 55%;

      }

      .heroSlide.third{
        background-image:url(assets/images/compressedImages/zarak-khan-69ilqMz0p1s-unsplash.jpg);
         position: absolute;
        top: 0;
        left: 0;
        z-index: 3;
        width: 100%;
        animation:fadeInOutFor3 25s linear forwards;
        animation-iteration-count: infinite;
        opacity: 0;
      }

       @keyframes fadeInOutFor1{
        /*Since there are 3 slides, 100/3=33
        だから100%を三分割して1/3の間だけ表示
        のこりの2/3の間は非表示にする
        
        */
        0%{opacity: 1;
         transform: scale(1.02);}
          6%{opacity: 1;
            
          }


          33%{opacity: 1;}
          39%{opacity: 0;
                  transform: scale(1.1);
                }

          94%{opacity: 0;
           transform: scale(1);}
          100%{opacity: 1;
          transform: scale(1.02); }
      }



      @keyframes fadeInOutFor2{
        0%{opacity: 0;
                  }

        27%{opacity: 0;}
        
        33%{opacity: 1;
                transform: scale(1);    
                }

        66%{opacity: 1;
                }

        72%{opacity: 0;}

        100%{opacity: 0;
                    transform: scale(1.1)
                  }
/* only 1/3 of this is shown */

      }

        @keyframes fadeInOutFor3{
        0%{opacity: 0;
                  }

       
        66%{opacity: 0;
                }

        72%{opacity: 1;}

        100%{opacity: 1;
                    transform: scale(1.1)
                  }
/* only 1/3 of this is shown */

      }


     
      header{
        background-color:rgb(85, 48, 23);
        width:100%;
        height:13vh;
        display:flex;
        font-family: "Hina Mincho", serif;
        font-style: normal;
        font-weight:800;
        justify-content: center;
        position:relative;
        align-items: center;
        z-index: 1;
      }

      .title{
        font-size: 2.3rem;
        color:white;
        align-items:center;
        justify-content:center;
        margin:0px auto;
        text-decoration:none;
        letter-spacing: 0.4rem;
        position: relative;
        z-index: 3;
      }

        p.message{
          margin:0px;
          font-size: 2rem;
          letter-spacing: 0.4rem;
          color: white;
          z-index: 6;
            font-family: "Hina Mincho", serif;
        font-style: normal;
        font-weight:600;
        text-shadow: 3px 3px 8px black;
        }

        .about{
          padding:120px 0;

        }

        .pillarContainer{
          display:flex;
          margin:0px auto;
          justify-content: space-between;
          width: 80%;
        }

        .pillar{
          width:28%;
          color:white;
          /* margin:0px 40px; */
        }
        .pillar h3{
          letter-spacing: 0.4rem;
          line-height: 1.9rem;
        }


        .pillar p{
          letter-spacing: 0.3rem;
          line-height: 1.7rem;
        }

        section{
          margin-bottom: 30vh;
        }

        section.about{
          padding-top: 0px;
          padding-bottom:50px;
        }

        .sectionTitle{
          display:flex;
          justify-content:center;
          margin:40px auto;
          font-family: "Hina Mincho", serif;
        font-style: normal;
          
        }

        .sectionTitle p{
          color:white;
          font-size:3.5vh;
          text-align: center;
          font-family: "Hina Mincho", serif;
          font-style: normal;
          font-size: 2rem;
          font-weight: 500;
          letter-spacing: 0.7rem;
          line-height: 2.8rem;
        }
        /*/////News Feed///////////////////////////////////////////////*/
        h3{
          text-align: center;
        }

        .newsFeedPlate{
          border:1px solid white;
          color:white;
          height: 15em;
          overflow:auto;
          background: #b5b5b5;
          color: #000000;
        }
        .about .container h3{
          color:white;
          text-align: center;
          padding-bottom: 1.2vw;
        }

        .articleContainer{
          border-bottom:0.5px solid white;
          display: flex;
          height: 7vw;
        }

        .articleContainer p{
          margin: 1.6rem 4.6rem;
          width: 5vw;
        }
/* ... */

